--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const personJsonLd = {
     set:html={JSON.stringify(personJsonLd)}
   />
 
-  <Hero />
+  <Hero imageSrc="/images/dusan.png" imageAlt="Dušan Todorović portrait" />
   <div class="container">
     <FeaturedPosts posts={recentPosts} />
   </div>
