--- a/src/modules/blog/components/BlogHeader.astro
+++ b/src/modules/blog/components/BlogHeader.astro
@@ -1,7 +1,7 @@
 ---
 import styles from './BlogHeader.module.css';
 import TagList from './TagList';
-import { isDraftVisible } from '../services/blogPosts';
+import { isDraftVisible } from '../services/blogPostPolicy';
 import type { CollectionEntry } from 'astro:content';
 
 interface Props {
